<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <EditText
        android:id="@+id/editText_nomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/valor_1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_Quantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor_5"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/editText_nomeProduto"
        app:layout_constraintStart_toStartOf="@+id/editText_nomeProduto"
        app:layout_constraintTop_toBottomOf="@+id/editText_nomeProduto" />

    <EditText
        android:id="@+id/editText_dataValidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/valor_2"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_Quantidade" />

    <Button
        android:id="@+id/button_cadastrarProduto"
        android:layout_width="399dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/red"
        android:text="@string/valor_6"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_dataValidade" />

</androidx.constraintlayout.widget.ConstraintLayout>